--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script>
-      if(document.referrer.slice(0,21) != "http://127.0.0.1:9000"){
+      if(document.referrer.slice(0,27) != "http://www.sevenfridayz.com"){
         window.location.href="http://www.baidu.com"
       }
       </script>
