--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>index</title>
     <script>
       if(document.referrer.slice(0,27) != "http://www.sevenfridayz.com"){
         window.location.href="http://www.baidu.com"
       }
-      </script>
+    </script>
     <style>
       *{ margin: 0%; padding: 0%; }
       .d1{ position: relative; width: 1125px; height: 2310px; }
