--- a/public/login.html
+++ b/public/login.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script>
+    <!-- <script>
       if(document.referrer.slice(0,27) != "http://www.sevenfridayz.com"){
         window.location.href="http://www.baidu.com"
       }
-      </script>
+      </script> -->
   </head>
   <body>
     <br>
