--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,38 @@
     </style>
   </head>
   <body>
+
     <div class="d1">
       <img class="img1" src="./image/index.png">
       <img class="img2" onclick="newSfeed()" src="image/showclear.png">
       <img class="img3" onclick="regLogin()" src="image/showclear.png">
       <img class="img4" onclick="to01Page()" src="image/showclear.png">
     </div>
+
     <script>
+      var wid
+      var code
+      window.onload=()=>{
+        var xhr = new XMLHttpRequest()
+        xhr.onreadystatechange= ()=>{
+          if(xhr.readyState==4 && xhr.status==200){
+            var result = xhr.responseText
+            if(result=="0"){
+              window.location.href="http://www.baidu.com"
+            }
+            var obj = JSON.parse(result)
+            console.log(obj)
+            wid = obj.wid
+            code = obj.code
+          }
+        }
+
+        var url = `mypro/indexCheckUrl${window.location.search}`
+        xhr.open("get",url,true)
+
+        xhr.send(null)
+      }
+
       function newSfeed(){
         window.location.href="http://www.sevenfriday.com"
       }
@@ -74,8 +99,10 @@
         window.location.href="https://www.sevenfriday.com/web.aspx?PageID=197"
       }
       function to01Page(){
-        window.location.href=`${window.location.origin}/01.html${window.location.search}`
+        window.location.href=`${window.location.origin}/01.html?n=n&wid=${wid}&code=${code}`
       }
     </script>
+
+
   </body>
 </html>
