--- a/public/check.html
+++ b/public/check.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>check</title>
+    <title>SevenFriday</title>
   </head>
   <body>
     <script>
