--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>SevenFriday</title>
     <!-- <script>
       if(document.referrer.slice(0,27) != "http://www.sevenfridayz.com"){
         window.location.href="http://www.baidu.com"
@@ -54,7 +54,7 @@
         top: 68.5%;
         height: 31.5%;
         width: 100% ;
-        opacity:0.4;
+        opacity:0.8;
       }      
 
     </style>
